# Radix-Trie-Dictionary

./: .gitignore  CMakeLists.txt  Makefile  README.md  copy.md  financialDemo.cpp  pom.xml  radix.txt  run.bat  t27.c  t27.h  test_large  test_large.c  todo.md  what.md
.history/: CMakeLists_20250408005418.txt  CMakeLists_20250408150514.txt  CMakeLists_20250408150530.txt  CMakeLists_20250408151008.txt  CMakeLists_20250408164548.txt  CMakeLists_20250408164610.txt  CMakeLists_20250408164701.txt  CMakeLists_20250408165136.txt  CMakeLists_20250408202154.txt  CMakeLists_20250408202236.txt  CMakeLists_20250408222456.txt  CMakeLists_20250408235935.txt  Dockerfile_20250409004356  buildandrun_20250408150421.bat  docker-compose_20250409102345.yml  docker-compose_20250409124956.yml  run_20250408150514.bat  run_20250408160035.bat  run_20250408165438.bat  run_20250408165456.bat  run_20250408165548.bat  todo_20250407224229.md  todo_20250409204957.md  todo_20250410011005.md  todo_20250410102734.md  todo_20250410103353.md  what_20250409100456.md  what_20250409100504.md  what_20250409122658.md  what_20250409125608.md  what_20250409130703.md  what_20250409191846.md
collections/: pom.xml
common/: pom.xml
data/: transactions.csv
entity2dim/: pom.xml
entity2risk/: App.scala  EntityFrequencyAggregator.scala  EntityRiskScorer.scala  FrequencyAnomalyDetector.scala  RiskAnalysisTopology.scala  pom.xml
native-lib/: pom.xml
resources/: sense-and-sensiblity.txt  sherlock_holmes.txt
scripts/: build.sh  start-dev.sh  stop-dev.sh
src/: TransactionProducer.cpp  radixTree.cpp
(+92 files in other folders)
